quetz_client/meta.yaml: Ensure compatibility for conda-build 3+
Host depending on python doesn't ensure pip is available, for
example if 'add_pip_as_python_dependency' is disabled in conda
config. Update to 'host' instead of 'build' as targeting
conda-build 3, pre-process selectors for noarch packages should
also not be used.

--- a/quetz_client/meta.yaml
+++ b/quetz_client/meta.yaml
@@ -10,17 +10,17 @@ source:
 
 build:
   noarch: python
-  skip: true  # [win and py27]
   number: 0
   script: {{ PYTHON }} -m pip install . --no-deps -vv
 
 requirements:
-  build:
-    - python
+  host:
+    - python >=3.6
+    - pip
     - setuptools
 
   run:
-    - python
+    - python >=3.6
     - requests >=2,<3
     - conda-verify >=3,<4
     - conda-build >=3,<4
