--- a/quetz_client/pyproject.toml
+++ b/quetz_client/pyproject.toml
@@ -4,3 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [tool.black]
 skip-string-normalization = true
+
+[tool.isort]
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
