--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,11 +65,16 @@ jobs:
           export MAMBA_EXE=$(pwd)/micromamba
           . $MAMBA_ROOT_PREFIX/etc/profile.d/mamba.sh
           micromamba activate ~/test_env
-          pwd
-          pip install -e .
-          export QUETZ_IS_TEST=1
           if [ "$TEST_DB_BACKEND" == "postgres" ]; then
             export QUETZ_TEST_DATABASE="postgresql://postgres:mysecretpassword@${POSTGRES_HOST}:${POSTGRES_PORT}/postgres"
             echo "Running with postgres"
           fi
+          export QUETZ_IS_TEST=1
+
+          echo "testing server"
+          pip install -e .
           pytest -v ./quetz/tests/
+
+          echo "testing plugins"
+          pip install -e ./plugins/quetz_runexports
+          pytest -v ./plugins/quetz_runexports/tests
