--- a/plugins/quetz_runexports/alembic.ini
+++ b/plugins/quetz_runexports/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = quetz:migrations
+script_location = quetz_runexports:migrations
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
@@ -29,7 +29,7 @@ script_location = quetz:migrations
 # version location specification; this defaults
 # to migrations/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path
-version_locations = quetz/migrations/versions quetz_runexports:migrations/versions
+# version_locations = %(here)s/bar %(here)s/bat migrations/versions
 
 # the output encoding used when revision files
 # are written from script.py.mako
