adding migration files to runexports

--- a/alembic.ini
+++ b/alembic.ini
@@ -29,7 +29,8 @@ script_location = quetz:migrations
 # version location specification; this defaults
 # to migrations/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path
-version_locations = quetz/migrations/versions quetz_runexports:migrations/versions
+#version_locations = quetz:migrations/versions
+# quetz_runexports:migrations/versions
 
 # the output encoding used when revision files
 # are written from script.py.mako
