adding s3fs to deps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
           ./micromamba create -y -p ~/test_env 'python>=3.7' pip fastapi typer authlib \
                        httpx=0.12.0 sqlalchemy sqlite psycopg2 python-multipart uvicorn zstandard \
                        appdirs toml fsspec conda requests "h2<4.0.0" starlette-full jinja2 itsdangerous alembic \
-                       zchunk conda-build -c conda-forge
+                       zchunk conda-build s3fs -c conda-forge
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
       - name: test quetz
