--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,11 @@
 name: CI
 
-on: [push, pull_request]
+on: 
+  push:
+  pull_request:
+    branches:
+      - master
+      
 
 jobs:
   test_quetz:
