add tests for current_repodata plugin

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,3 +96,6 @@ jobs:
 
           pip install ./plugins/quetz_conda_suggest
           pytest -v ./plugins/quetz_conda_suggest
+
+          pip install ./plugins/quetz_current_repodata
+          pytest -v ./plugins/quetz_current_repodata
