add tests for current_repodata plugin (#188)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
           ./micromamba create -y -p ~/test_env 'python>=3.7' pip fastapi typer authlib \
                        httpx=0.12.0 sqlalchemy sqlite psycopg2 python-multipart uvicorn zstandard \
                        appdirs toml fsspec conda requests "h2<4.0.0" starlette-full jinja2 itsdangerous alembic \
-                       zchunk -c conda-forge
+                       zchunk conda-build -c conda-forge
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
       - name: test quetz
@@ -100,3 +100,6 @@ jobs:
 
           pip install ./plugins/quetz_conda_suggest
           pytest -v ./plugins/quetz_conda_suggest
+
+          pip install ./plugins/quetz_current_repodata
+          pytest -v ./plugins/quetz_current_repodata
