install requirements from file on CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,10 +49,7 @@ jobs:
           export MAMBA_ROOT_PREFIX=~/micromamba
           export MAMBA_EXE=$(pwd)/micromamba
           . $MAMBA_ROOT_PREFIX/etc/profile.d/mamba.sh
-          ./micromamba create -y -p ~/test_env 'python>=3.7' pip fastapi typer authlib \
-                       httpx=0.12.0 sqlalchemy sqlite psycopg2 python-multipart uvicorn zstandard \
-                       appdirs toml fsspec conda requests "h2<4.0.0" starlette-full jinja2 itsdangerous alembic \
-                       zchunk conda-build s3fs -c conda-forge
+          ./micromamba create -y -p ~/test_env -f environment.yml
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
       - name: test quetz
