--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,6 @@ on:
   pull_request:
     branches:
       - master
-      
 
 jobs:
   test_quetz:
@@ -33,27 +32,11 @@ jobs:
           --health-retries 5
     steps:
       - uses: actions/checkout@v2
-      - name: install micromamba
-        run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            wget -qO- https://micromamba.snakepit.net/api/micromamba/linux-64/latest | tar -xvj bin/micromamba --strip-components=1
-          else
-            wget -qO- https://micromamba.snakepit.net/api/micromamba/osx-64/latest | tar -xvj bin/micromamba
-            mv bin/micromamba ./micromamba
-          fi
-          ./micromamba shell init -s bash -p ~/micromamba
-          mkdir -p ~/micromamba/pkgs/
-      - name: install deps
-        shell: bash -l {0}
-        run: |
-          export MAMBA_ROOT_PREFIX=~/micromamba
-          export MAMBA_EXE=$(pwd)/micromamba
-          . $MAMBA_ROOT_PREFIX/etc/profile.d/mamba.sh
-          ./micromamba create -y -f environment.yml
-        env:
-          PYTHON_VERSION: ${{ matrix.python-version }}
+
+      - name: install mamba
+        uses: mamba-org/provision-with-micromamba@main
       - name: test quetz
-        shell: bash -l -euo pipefail {0}
+        shell: bash -l -eo pipefail {0}
         env:
           TEST_DB_BACKEND: ${{ matrix.test_database }}
           QUETZ_TEST_DBINIT: ${{ matrix.db_init }}
@@ -64,12 +47,6 @@ jobs:
           S3_ENDPOINT: https://s3.sbg.cloud.ovh.net/
           S3_REGION: sbg
         run: |
-          echo ${QUETZ_TEST_DBINIT}
-          export MAMBA_ROOT_PREFIX=~/micromamba
-          export MAMBA_EXE=$(pwd)/micromamba
-          . $MAMBA_ROOT_PREFIX/etc/profile.d/mamba.sh
-          micromamba activate quetz 
-
           # install dev dependencies
           pip install -e .[dev]
           pip install pytest-github-actions-annotate-failures
