--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -21,10 +21,10 @@ jobs:
         shell: bash -l {0}
         run: |
           cd docs
-          make html
+          make html SPHINXOPTS="-W"
       - uses: actions/upload-artifact@v1
         name: "upload artifacts"
         with:
           name: DocumentationHTML
-          path: docs/_build/html
+          path: docs/build/html
 
