dont vendor libcflib harvester anymore

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: 
+on:
   push:
   pull_request:
     branches:
@@ -78,6 +78,7 @@ jobs:
 
           echo "install and test plugins"
 
+          pip install --no-deps git+ssh://git@github.com/regro/libcflib@master
           for f in ./plugins/quetz_*
           do
             echo "Testing plugin" $f
