use git+https to install libcflib

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
 
           echo "install and test plugins"
 
-          pip install --no-deps git+ssh://git@github.com/regro/libcflib@master
+          pip install --no-deps git+https://git@github.com/regro/libcflib@master
           for f in ./plugins/quetz_*
           do
             echo "Testing plugin" $f
