--- a/quetz_db_ext/CMakeLists.txt
+++ b/quetz_db_ext/CMakeLists.txt
@@ -5,8 +5,20 @@ project(quetz-db-ext)
 find_package(SQLite3)
 find_package(PostgreSQL)
 
-add_library(quetz_sqlite SHARED conda.c quetz_sqlite.c)
-target_link_libraries(quetz_sqlite SQLite::SQLite3)
+option(POSTGRES_13_DOCKER OFF)
 
-add_library(quetz_pg SHARED conda.c quetz_pg.c)
-target_link_libraries(quetz_pg PostgreSQL::PostgreSQL)
+if (SQLite3_FOUND)
+	add_library(quetz_sqlite SHARED conda.c quetz_sqlite.c)
+	target_link_libraries(quetz_sqlite SQLite::SQLite3)
+endif()
+
+if (PostgreSQL_FOUND)
+	add_library(quetz_pg SHARED conda.c quetz_pg.c)
+	target_link_libraries(quetz_pg PostgreSQL::PostgreSQL)
+endif()
+
+if (POSTGRES_13_DOCKER)
+	include_directories(/usr/include/postgresql/13/server/)
+	add_library(quetz_pg SHARED conda.c quetz_pg.c)
+	target_link_libraries(quetz_pg pq)
+endif()
