--- a/docker/docker_config.toml
+++ b/docker/docker_config.toml
@@ -25,3 +25,6 @@ client_secret = "super-secret"
 access_token_url = "http://jupyterhub:8000/hub/api/oauth2/token"
 authorize_url = "http://localhost:8001/hub/api/oauth2/authorize"
 api_base_url = "http://jupyterhub:8000/hub/api/"
+
+[local_store]
+redirect_enabled = true
