add redirect to nginx with secure link

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -40,6 +40,11 @@ http {
       server quetz-web:8000;
     }
 
+    map $uri $file_name {
+        default none;
+        "~*/files/channels/(?<name>.*)" channels/$name;
+    }
+
     server {
         listen      8080;
         add_header  Cache-Control $control;
@@ -57,8 +62,14 @@ http {
           proxy_pass http://quetz;
         }
 
+        # path for channels
         location /files/channels/ {
-          # path for channels
+          # secure_link $arg_md5,$arg_expires;
+          # secure_link_md5 "$secure_link_expires$file_name mysecrettoken";
+
+          # if ($secure_link = "") { return 403; }
+          # if ($secure_link = "0") { return 410; }
+
           alias /quetz-deployment/channels/;
         }
     }
