Use FPS to register routers

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,10 +18,9 @@ universal = 1
 include_package_data = True
 packages = find:
 python_requires = >=3.7
-  
+
 install_requires =
-  fastapi
-  typer
+  fps[uvicorn]>=0.0.8
   authlib
   alembic
   psycopg2
@@ -29,7 +28,6 @@ install_requires =
   sqlalchemy<1.4.0
   sqlalchemy-utils
   python-multipart
-  uvicorn
   zstandard
   appdirs
   toml
@@ -55,8 +53,10 @@ install_requires =
 [options.entry_points]
 console_scripts =
     quetz = quetz.cli:app
+fps_router =
+    quetz = quetz.main
 
-[options.extras_require] 
+[options.extras_require]
 dev =
   black
   flake8
