--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - pip
   - fastapi
   - typer
-  - authlib
+  - authlib=0.15.4
   - psycopg2
   - httpx=0.20.0
   - sqlalchemy<1.4.0
