feat: enable redirect with google cloud storage

--- a/environment.yml
+++ b/environment.yml
@@ -28,7 +28,7 @@ dependencies:
   - alembic
   - zchunk
   - s3fs
-  - gcsfs
+  - gcsfs >=2021.10.1
   - sphinx
   - sphinx-book-theme
   - tenacity
