--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
   alembic
   psycopg2
   httpx~=0.20.0
-  sqlalchemy<1.4.0
+  sqlalchemy
   sqlalchemy-utils
   python-multipart
   uvicorn
