Make dep truly optional

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,6 @@ install_requires =
   typer
   authlib
   alembic
-  psycopg2
   httpx~=0.20.0
   sqlalchemy
   sqlalchemy-utils
@@ -33,30 +32,46 @@ install_requires =
   zstandard
   appdirs
   toml
-  quetz-client
   fsspec
   requests
   h2<4.0.0
   pluggy
   jinja2
   itsdangerous
-  s3fs
-  gcsfs >=2021.10.1
   tenacity
   xattr
   aiofiles
   pyyaml
   ujson
   prometheus_client
-  pamela
   typing_extensions
-  adlfs
 
 [options.entry_points]
 console_scripts =
     quetz = quetz.cli:app
 
-[options.extras_require] 
+[options.extras_require]
+azure =
+  adlfs
+gcs =
+  gcsfs >=2021.10.1
+pam = 
+  pamela
+postgre =
+  psycopg2
+s3 =
+  s3fs
+sqlite =
+  sqlite3
+all =
+  %(azure)s
+  %(gcs)s
+  %(pam)s
+  %(postgre)s
+  %(s3)s
+  %(sqlite)s
+client =
+  quetz-client
 dev =
   black
   flake8
