Set up the releaser

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,7 @@ skip-string-normalization = true
 line_length = 88
 multi_line_output = 3
 include_trailing_comma = true
+
+[[tool.tbump.file]]
+src = "quetz/_version.py"
+version_template = '({major}, {minor}, {patch})'
