--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
           S3_REGION: sbg
         run: |
           # install dev dependencies
-          pip install -e .[dev]
+          pip install -e .[all,dev]
           pip install redis rq
           pip install pytest-github-actions-annotate-failures
 
@@ -94,3 +94,21 @@ jobs:
           verbose: true
           file: ./coverage.xml
 
+  test_release:
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+
+    - name: Check Release
+      uses: jupyter-server/jupyter_releaser/.github/actions/check-release@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
