--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = quetz
+name = quetz-server
 version = attr: quetz._version.__version__
 description = The mamba-org server for conda packages
 long_description = file: README.md
