--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,7 @@ multi_line_output = 3
 include_trailing_comma = true
 
 [tool.jupyter-releaser.options]
-check-imports =
-  quetz
+check-imports = ["quetz"]
 
 [tool.tbump.version]
 current = "0.2.0"
