Setup is missing `importlib-metadata` dep

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,31 +20,31 @@ packages = find:
 python_requires = >=3.7
   
 install_requires =
-  fastapi
-  typer
-  authlib
   alembic
-  httpx~=0.20.0
+  aiofiles
+  appdirs
+  authlib
+  fastapi
+  fsspec
+  h2<4.0.0
+  importlib-metadata
+  itsdangerous
+  jinja2
+  pluggy
+  prometheus_client
+  python-multipart
+  pyyaml
+  requests
   sqlalchemy
   sqlalchemy-utils
-  python-multipart
-  uvicorn
-  zstandard
-  appdirs
-  toml
-  fsspec
-  requests
-  h2<4.0.0
-  pluggy
-  jinja2
-  itsdangerous
   tenacity
-  xattr
-  aiofiles
-  pyyaml
-  ujson
-  prometheus_client
+  toml
+  typer
   typing_extensions
+  ujson
+  uvicorn
+  xattr
+  zstandard
 
 [options.entry_points]
 console_scripts =
@@ -72,6 +72,7 @@ client =
 dev =
   black
   flake8
+  httpx~=0.20.0
   isort
   pre-commit
   pytest
