--- a/quetz_frontend/package.json
+++ b/quetz_frontend/package.json
@@ -9,22 +9,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@carbon/themes": "^10.13.0",
-    "@carbon/vue": "^2.27.0",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.3.2"
+    "@carbon/themes": "^10.53.0",
+    "@carbon/vue": "^2.40.0",
+    "core-js": "^3.21.1",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^7.0.0",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "@babel/eslint-parser": "^7",
+    "@vue/cli-plugin-babel": "^5",
+    "@vue/cli-plugin-eslint": "^5",
+    "@vue/cli-service": "^5",
+    "eslint": "^8",
+    "eslint-plugin-vue": "^8",
+    "sass": "^1",
+    "sass-loader": "^12",
+    "vue-template-compiler": "^2"
   },
   "eslintConfig": {
     "root": true,
@@ -36,7 +36,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser"
     },
     "rules": {}
   },
