add pytest-timeout in dev install and fix pre-commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ universal = 1
 include_package_data = True
 packages = find:
 python_requires = >=3.7
-  
+
 install_requires =
   alembic
   aiofiles
@@ -56,7 +56,7 @@ azure =
   adlfs
 gcs =
   gcsfs >=2022.02
-pam = 
+pam =
   pamela
 postgre =
   psycopg2
@@ -79,6 +79,7 @@ dev =
   pytest-asyncio
   pytest-mock
   pytest-cov
+  pytest-timeout
   tbump
 test =
   %(dev)s
