--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,8 @@ repos:
     rev: 3.8.4
     hooks:
       - id: flake8
+        additional_dependencies:
+          - flake8-use-fstring
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.902
     hooks:
