--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - typer
   - authlib=0.15.5
   - psycopg2
-  - httpx=0.20.0
+  - httpx>=0.22.0
   - sqlalchemy
   - sqlalchemy-utils
   - sqlite
