--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,11 @@ jobs:
         ports:
           - 6379:6379
     steps:
+      - name: Check status code
+        shell: bash -l {0}
+        run: |
+          cat abc
+          echo hello
       - uses: actions/checkout@v2
 
       - name: install mamba
