Remove `httpx` pin, fix tests, & test plugins individually (#574)
* Remove httpx pin

* add relaxed pin back in

* undo pins to check ci

* Fix tests

* use github flake8

* add constraint back in

* fix plugin tests

* fix tos tests

* improve plugin testing

* hmmm

* why doesn't this run

* test status code some more

* better?

* huh

* pipefail

* die

* try reordering

* is mamba the issue?

* do it with set instead

* use set +e

* fix bash variables

* use string instead

* string comparison

* remove double shell definition

* Log which plugins failed

* last polish

* Fix test that i broke for testing

* trigger CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,11 +110,25 @@ jobs:
           
           for f in ./plugins/quetz_*
           do
-            echo "::group::Testing plugin${f}"
+            echo "::group::Testing plugin ${f}"
             quetz plugin install $f
+
+            # We want to test all the plugins, regardless of whether one fails
+            set +e
             pytest -v $f
+            pytest_exit_code=$?
+            set -e
             echo "::endgroup::"
+            if [ $pytest_exit_code -ne 0 ]; then
+              echo "::error::Tests for plugin $f failed!"
+              tests_failed="true"
+            fi
           done
+
+          if [ "$tests_failed" == "true" ]; then
+            echo "::error::Some plugin tests failed!"
+            exit 1
+          fi
 
       - uses: codecov/codecov-action@v1
         with:
